--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,31 @@ plugins {
 	id 'maven-publish'
 }
 
+//loom {
+//	runs {
+//		// This adds a new gradle task that runs the datagen API: "gradlew runDatagenClient"
+//		datagenClient {
+//			inherit client
+//			name "Data Generation"
+//			vmArg "-Dfabric-api.datagen"
+//			vmArg "-Dfabric-api.datagen.output-dir=${file("src/main/generated")}"
+//			vmArg "-Dfabric-api.datagen.modid=voltcraft"
+//
+//			runDir "build/datagen"
+//		}
+//	}
+//}
+//
+//// Add the datagenned files into the jar.
+//sourceSets {
+//	main {
+//		resources {
+//			srcDirs += [
+//					'src/main/generated'
+//			]
+//		}
+//	}
+//}
 sourceCompatibility = JavaVersion.VERSION_17
 targetCompatibility = JavaVersion.VERSION_17
 
